--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@hookform/resolvers": "^3.4.2",
 		"axios": "^1.7.2",
 		"concurrently": "^8.2.2",
+		"dotenv": "^16.4.5",
 		"json-server": "^0.17.0",
 		"json-server-auth": "^2.1.0",
 		"react": "^18.2.0",
